--- a/main/shopping_HTML/shoppingIndex.html
+++ b/main/shopping_HTML/shoppingIndex.html
@@ -45,18 +45,26 @@
                 <table width="1200" border="0" cellspacing="0" cellpadding="4"  align="center" class="nav_font16">
                     <tr>
                         <td width="200">&nbps;</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td width="80" align="center" class="nav_active">
+                            <a href="shoppingIndex.html" class="white">首页</a>
+                        </td>
+                        <td width="100" align="center">
+                            <a href="shoppingShow.html" class="white">最新上架</a>
+                        </td>
+                        <td width="100" align="center">品牌活动</td>
+                        <td width="100" align="center">原厂直供</td>
+                        <td width="80" align="center">团购</td>
+                        <td width="100" align="center">限时抢购</td>
+                        <td width="100" align="center">促销打折</td>
                         <td width="200" align="center">&nbps;</td>
                     </tr>
                 </table>
             </td>
         </tr>
     </table>
+    <!--菜单导航 end-->
+    <!--中部区域 start-->
+    
+    <!--中部区域 end-->
     </body>
 </html>
