--- a/main/shopping_HTML/shoppingShow.html
+++ b/main/shopping_HTML/shoppingShow.html
@@ -1,24 +1,42 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ <html xmlns="http://www.w3.org/1999/xhtml"> 
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+       <title>漫步时尚广场-购物列表</title>
+       <link href="css/show.css" rel="stylesheet" type="text/css">
     </head>
     
     <body>
+       <!--顶部区域 start-->
+       <div class="top_bg">
+            <div class="top_content">
+                 <div class="floatl"><img src="images/star.jpg">收藏 | HI，欢迎来订购！</div>
+                 <div class="floatr">客户服务<img src="images/arrow.gif">&nbsp;网站导航<img src="images/arrow.gif">&nbsp;
+                    <div class="xl">
+                         <div class="droparrow"><span class="shopcart"></span>我的购物车<span class="orange">0</span>件<img src="images/arrow.gif"/></div>
+                         <!--下拉菜单-->
+                         <div class="dropdown">
+                              <!---->
+                         </div>
+                    </div>
+                 </div>
+            </div>
+       </div>
+       <!--顶部区域 end-->
+
+       <div class="clear"></div>
+       <!--logo和banner start-->
+
+       <!--logo和banner end-->
+
+
        <!--菜单导航栏-->
        <div class="nav_bg">
            <div class="nav_content">
                <ul class="nav">
-                     <li><a herf="shoppingIndex.html" class="white">首页</a></li>
-                     <li class="nav_active"><a herf="shoppingShow.html" calss="white">最新上架</a></li>
+                     <li><a href="shoppingIndex.html" class="white">首页</a></li>
+                     <li class="nav_active"><a href="shoppingShow.html" calss="white">最新上架</a></li>
                      <li>品牌活动</li>
                      <li>原厂直供</li>
                      <li>团购</li>
@@ -75,19 +93,19 @@
                          <dd>冬季新款牛仔外套加厚连帽毛领加绒牛仔棉衣</dd>
                </dl>
                <dl>
-                    <div><img src="images/shopshow/yufu2.jpg"/></div>
+                    <div><img src="images/shopshow/yifu2.jpg"/></div>
                     <dt><span class="price">¥69元</span>
                          <span class="font12">500人购买</span></dt>
                     <dd>夏新款韩版 透气舒适简约半截袖T恤</dd>
                </dl>
                <dl>
-                    <div><img src="images/shopshow/yufu3.jpg"/></div>
+                    <div><img src="images/shopshow/yifu3.jpg"/></div>
                     <dt><span class="price">¥109元</span>
                          <span class="font12">643人购买</span></dt>
                     <dd>韩版甜美气质两篇热气球字母中长款圆领短袖T恤</dd>
                </dl>
                <dl>
-                    <div><img src="images/shopshow/yufu2.jpg"/></div>
+                    <div><img src="images/shopshow/yifu2.jpg"/></div>
                     <dt><span class="price">¥69元</span>
                          <span class="font12">678人购买</span></dt>
                     <dd>夏新款韩版 透气舒适简约半截袖T恤</dd>
