--- a/main/shopping_HTML/shoppingIndex.html
+++ b/main/shopping_HTML/shoppingIndex.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-    <!------------------------------------顶部区域------------------------------------------>
+    <!--顶部区域 start-->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" class="top_line">
         <tr>
             <td bgcolor="#f7f7f7">
@@ -29,7 +29,7 @@
             </td>
         </tr>
     </table>
-    <!---------------------------------顶部区域------------------------------------------->
+    <!--顶部区域 end-->
     <!--logo和banner start-->
     <table width="1200" border="0" cellspacing="0" cellpadding="0"  align="center">
         <tr>
