--- a/main/shopping_HTML/register.html
+++ b/main/shopping_HTML/register.html
@@ -9,10 +9,30 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" class="top_line">
         <tr>
             <td bgcolor="#f7f7f7">
-            ...<!--省略顶部区域的代码-->
+                <table width="1200" border="0" cellspacing="0"
+                cellpadding="0" align="center">
+                <tr>
+                    <td class="padding-top"><img src="images/star.jpg">收藏|HI,欢迎来订购
+                        <a href="../manageadmin/login.jpg" class="orange">[请登录]</a>
+                        <a href="../register/Register.html" class="orange">[免费注册]</a>
+                    </td>
+                    <td align="right">客户服务<img src="images/arrow.gif">&nbsp;网站导航
+                        <img src="images/arrow.gif"/>&nbsp;<span class="droparrow">
+                            <span class="shopcart"></span>我的购物车
+                            <span class="orange">0</span>件<img src="images/arrow.gif"/>
+                        </span>
+                    </td>
+                </tr>
+            </table>
             </td>
         </tr>
     </table>
     <!--顶部区域 end-->
+    <!--logo and banner start-->
+    <table width="1200" border="0" cellspacing="0" cellpadding="0" align="center">
+        <tr>
+            <td height="95"><img src="../register/images/logo.jpg"/></td>
+        </tr>
+    </table>
     </body>
 </html>
